--- a/src/styles/blocks/controls.scss
+++ b/src/styles/blocks/controls.scss
@@ -8,18 +8,31 @@
     color: inherit;
 
     transition: color $transitionDuration;
+    cursor: pointer;
 
     &:hover {
       color: $secondaryGreenHover;
     }
   }
 
+  &__lang--mobile {
+    font-size: $fSize22;
+  }
+
   &__item-lang {
     color: $grayMediumColor;
 
-    &--active {
-      color: $darkLightColor;
+    &--mobile {
+      font-size: $fSize22;
     }
+  }
+
+  &__input {
+    display: none;
+  }
+
+  &__input:checked + &__item-lang {
+    color: $primaryBlackColor;
   }
 
 }
