--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,10 +1,13 @@
 .header {
   position: relative;
-  height: 100vh;
   margin-bottom: 110px;
 
+  @include onTablet {
+    margin-bottom: 140px;
+  }
+
   @include onDesktop {
-    margin-bottom: 60px;
+    height: 100vh;
   }
 
   &__container {
